bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q4 (Execution Plan, String).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(feature@0) as feature, ENC_PT(priceRatio@3) as priceRatio]
  SortExec: TopK(fetch=10), expr=[AS_SORTABLE_BYTES(DIV(withFeaturePrice@1, withoutFeaturePrice@2)) DESC, AS_SORTABLE_BYTES(ENC_TF(ENC_PT(feature@0))) ASC], preserve_partitioning=[false]
    ProjectionExec: expr=[feature@0 as feature, withFeaturePrice@1 as withFeaturePrice, withoutFeaturePrice@2 as withoutFeaturePrice, DIV(withFeaturePrice@1, withoutFeaturePrice@2) as priceRatio]
      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(feature@0, feature@0)], projection=[feature@0, withFeaturePrice@1, withoutFeaturePrice@3]
        ProjectionExec: expr=[feature@0 as feature, <uuid>@1 as withFeaturePrice]
          AggregateExec: mode=Single, gby=[feature@0 as feature], aggr=[AVG(xsd:float(xsd:string(ENC_TF(ENC_PT(price))))) as <uuid>]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0)], projection=[feature@1, price@3]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[offer@1, feature@3]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@1)], projection=[product@0, offer@1]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..9697663]]}, projection=[subject@1 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> AND object@3 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48>, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> AND <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48> <= object_max@6, required_guarantees=[object in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48>), predicate in (<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>)]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..9697663]]}, projection=[subject@1 as offer, object@3 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product>)]
                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?feature], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..9697663]]}, projection=[subject@1 as product, object@3 as feature], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature>)]
              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..9697663]]}, projection=[subject@1 as offer, object@3 as price], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price>)]
        ProjectionExec: expr=[feature@0 as feature, <uuid>@1 as withoutFeaturePrice]
          AggregateExec: mode=Single, gby=[feature@0 as feature], aggr=[AVG(xsd:float(xsd:string(ENC_TF(ENC_PT(price))))) as <uuid>]
            HashJoinExec: mode=CollectLeft, join_type=LeftAnti, on=[(feature@0, __inner__feature@1), (product@1, __inner__product@0)], projection=[feature@0, price@2]
              CrossJoinExec
                AggregateExec: mode=Single, gby=[feature@0 as feature], aggr=[]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(p@0, p@0)], projection=[feature@2]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?p <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..9697663]]}, projection=[subject@1 as p], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> AND object@3 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48>, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> AND <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48> <= object_max@6, required_guarantees=[object in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48>), predicate in (<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>)]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?p <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?feature], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..9697663]]}, projection=[subject@1 as p, object@3 as feature], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature>)]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@1, offer@0)], projection=[product@0, price@3]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@1)], projection=[product@0, offer@1]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..9697663]]}, projection=[subject@1 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> AND object@3 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48>, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> AND <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48> <= object_max@6, required_guarantees=[object in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48>), predicate in (<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>)]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..9697663]]}, projection=[subject@1 as offer, object@3 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product>)]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..9697663]]}, projection=[subject@1 as offer, object@3 as price], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price>)]
              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?feature], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..9697663]]}, projection=[subject@1 as __inner__product, object@3 as __inner__feature], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature>)]
