bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q4 (Optimized).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
Projection: ENC_PT(feature) AS feature, ENC_PT(priceRatio) AS priceRatio
  Sort: ENC_SORT(DIV(withFeaturePrice, withoutFeaturePrice)) DESC NULLS FIRST, ENC_SORT(ENC_TF(ENC_PT(feature))) ASC NULLS FIRST, fetch=10
    Projection: lhs.feature AS feature, lhs.withFeaturePrice AS withFeaturePrice, rhs.withoutFeaturePrice AS withoutFeaturePrice, DIV(lhs.withFeaturePrice, rhs.withoutFeaturePrice) AS priceRatio
      Inner Join: lhs.feature = rhs.feature
        SubqueryAlias: lhs
          Projection: feature, <uuid> AS withFeaturePrice
            Aggregate: groupBy=[[feature AS feature]], aggr=[[AVG(xsd:float(xsd:string(ENC_TF(price)))) AS <uuid>]]
              Projection: lhs.feature AS feature, rhs.price AS price
                Inner Join: lhs.offer = rhs.offer
                  SubqueryAlias: lhs
                    Projection: lhs.feature AS feature, rhs.offer AS offer
                      Inner Join: lhs.product = rhs.product
                        SubqueryAlias: lhs
                          Projection: lhs.product AS product, rhs.feature AS feature
                            Inner Join: lhs.product = rhs.product
                              SubqueryAlias: lhs
                                QuadPattern (?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48>)
                              SubqueryAlias: rhs
                                QuadPattern (?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?feature)
                        SubqueryAlias: rhs
                          QuadPattern (?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product)
                  SubqueryAlias: rhs
                    QuadPattern (?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price)
        SubqueryAlias: rhs
          Projection: feature, <uuid> AS withoutFeaturePrice
            Aggregate: groupBy=[[feature AS feature]], aggr=[[AVG(xsd:float(xsd:string(ENC_TF(price)))) AS <uuid>]]
              Projection: feature, price
                LeftAnti Join: feature = __correlated_sq_1.__inner__feature, product = __correlated_sq_1.__inner__product
                  Cross Join:
                    Aggregate: groupBy=[[feature]], aggr=[[]]
                      Projection: rhs.feature AS feature
                        Inner Join: lhs.p = rhs.p
                          SubqueryAlias: lhs
                            QuadPattern (?p <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48>)
                          SubqueryAlias: rhs
                            QuadPattern (?p <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?feature)
                    Projection: lhs.product AS product, rhs.price AS price
                      Inner Join: lhs.offer = rhs.offer
                        SubqueryAlias: lhs
                          Projection: lhs.product AS product, rhs.offer AS offer
                            Inner Join: lhs.product = rhs.product
                              SubqueryAlias: lhs
                                QuadPattern (?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType48>)
                              SubqueryAlias: rhs
                                QuadPattern (?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product)
                        SubqueryAlias: rhs
                          QuadPattern (?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price)
                  SubqueryAlias: __correlated_sq_1
                    Projection: product AS __inner__product, feature AS __inner__feature
                      QuadPattern (?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?feature)
